--- a/firstblog/blog1/templates/home.html
+++ b/firstblog/blog1/templates/home.html
@@ -1,36 +1,19 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block contents %}
 <body>
-  <br>
-      {% for blog in posts %}
-        <div class="container">
-            <div class="card">
-                <div class="card-body">
-                  <h2 class="card-title">{{blog.title}}</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">{{blog.pub_data}}</h6>
-                  <p class="card-text">{{blog.summary}}</p>
-                  <a href="{% url 'detail' blog.id%}">...more</a>
-                </div>
-              </div>
-            <br><br>
-        </div>
-      {%endfor%}
-      <div class ="container">
-        {% if posts.has_previous %}
-        <a href = "?page=1">First</a>
-        <a href = "?page={{posts.previous_page_number}}">Previous</a>
-        {% endif %}
-
-        <span>{{posts.number}}</span>
-        <span>of</span>
-        <span>{{posts.paginator.num_pages}}</span>
-
-        {% if posts.has_next %}
-        <a href = "?page={{posts.next_page_number}}">Next</a>
-        <a href = "?page={{posts.paginator.num_pages}}">Last</a>
-        {% endif %}
-      </div>
-
+    <div class="container">
+        <br>
+        <br>
+        <h1>멋쟁이 사자처럼</h1>
+        <br>
+        <br>
+        <img src="{% static 'lion.png' %}" height="300" alt="lion">
+        <br>
+        <br>
+        <h3>멋쟁이사자처럼은 2013년 프로그래머 이두희가 설립한 프로그래밍 교육 단체이다.<br>궁극적 목표는 컴퓨터공학 비전공자들도 프로그래밍 기초 지식을 배워 자신만의 웹서비스를 만들어 이를 통해 꿈을 실현할 수 있도록 하는 것이다.
+        </h3><br>
+        <a href="https://mju-likelion.com/" target="_blank" title="https://mju-likelion.com/">명지대 자연캠퍼스 멋쟁이 사자처럼</a>
+    </div> 
 </body>
 {% endblock %}
