--- a/firstblog/firstblog/templates/base.html
+++ b/firstblog/firstblog/templates/base.html
@@ -7,7 +7,7 @@
     
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="{% url 'blog'%}">Blog</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -20,21 +20,27 @@
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'new'%}">글쓰기</a>
                 </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link" href="{% url 'portfolio' %}">Portfolio</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link" href="{% url 'login' %}">LogIn</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
                   </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link" href="{% url 'logout' %}">LogOut</a>
-                </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'signup' %}">SignUp</a>
                 </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Dropdown
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{% url 'plus' %}">Plus</a>
+                    <a class="dropdown-item" href="{% url 'portfolio' %}">Portfolio</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{% url 'logout' %}">LogOut</a>
+                  </div>
+                </li>
               </ul>
-              <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}" method="post">
+                {% csrf_token %}
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="q" value="{{q}}">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
               </form>
             </div>
