--- a/firstblog/blog1/templates/plus.html
+++ b/firstblog/blog1/templates/plus.html
@@ -1,10 +1,34 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block contents %}
     <body>
+        <div class="container">
+            <div class="jumbotron" style=" transform: translateY(50%);">
+                <div class="container">
+                    <h2 style="margin-left: 350px">아마도 관심있는 분야(?)</h2>
+                </div>
+            </div>
+        <div class="card" style="width: 18rem; float:left; transform: translateY(60%); margin-left: 100px;">
+            <img src="{% static 'shyvana.jpg' %}" class="card-img-top" alt="쉬바나">
+            <div class="card-body">
+              <p class="card-text">쉬바나 재밌습니다. 근데 정글을 못해서 탑으로 갑니다...</p>
+            </div>
+          </div>
 
+          <div class="card" style="width: 18rem; float: left; transform: translateY(60%); margin-left: 30px;">
+            <img src="{% static 'kennen.jpg' %}" class="card-img-top" alt="케넨">
+            <div class="card-body">
+              <p class="card-text">케넨 재밌습니다. 궁 잘못쓰면 욕도 잘먹습니다!</p>
+            </div>
+          </div>
+
+          <div class="card" style="width: 18rem; float:left; transform: translateY(60%); margin-left: 30px;">
+            <img src="{% static 'aurelionsol.jpg' %}" class="card-img-top" alt="아우렐리온 솔">
+            <div class="card-body">
+              <p class="card-text">아우렐리온 솔 재미없습니다. 다만 외모가 멋집니다.</p>
+            </div>
+          </div>
+        </div>
         
     </body>
-
-
 {% endblock %}
